--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   test:
-    name: ${{ matrix.ruby }} (Rack ${{ matrix.rack }}, Puma ${{ matrix.puma }})
+    name: ${{ matrix.ruby }} (Rack ${{ matrix.rack }}, Puma ${{ matrix.puma }}, Tilt ${{ matrix.puma }})
     permissions:
       contents: read #  to fetch code (actions/checkout)
       actions: read #  to list jobs for workflow run (8398a7/action-slack)
@@ -24,20 +24,26 @@ jobs:
           - stable
         rack:
           - '~> 2'
+        tilt:
+          - stable
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
         ruby: [2.6, 2.7, '3.0', 3.1, 3.2, truffleruby]
         include:
-          - { ruby: 2.6, rack: '~> 2', puma: '~> 5' }
-          - { ruby: 3.2, rack: '~> 2', puma: '~> 5' }
-          - { ruby: 3.2, rack: '~> 2', puma: latest }
+          # Puma
+          - { ruby: 3.1, rack: '~> 2', puma: '~> 5',   tilt: stable }
+          - { ruby: 3.2, rack: '~> 2', puma: '~> 6.0', tilt: stable }
+          # Puma head
+          - { ruby: 3.2, rack: '~> 2', puma: latest,   tilt: stable }
+          # Tilt head
+          - { ruby: 3.2, rack: '~> 2', puma: latest,   tilt: latest, allow-failure: true }
           # Due to flaky tests, see https://github.com/sinatra/sinatra/pull/1870
-          - { ruby: jruby-9.3, rack: '~> 2', puma: stable, allow-failure: true }
+          - { ruby: jruby-9.3, rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
           # Due to https://github.com/jruby/jruby/issues/7647
-          - { ruby: jruby-9.4, rack: '~> 2', puma: stable, allow-failure: true }
+          - { ruby: jruby-9.4, rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
           # Never fail our build due to problems with head
-          - { ruby: ruby-head, rack: '~> 2', puma: stable, allow-failure: true }
-          - { ruby: jruby-head, rack: '~> 2', puma: stable, allow-failure: true }
-          - { ruby: truffleruby-head, rack: '~> 2', puma: stable, allow-failure: true }
+          - { ruby: ruby-head,        rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
+          - { ruby: jruby-head,       rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
+          - { ruby: truffleruby-head, rack: '~> 2', puma: stable, tilt: stable, allow-failure: true }
     env:
       rack: ${{ matrix.rack }}
       puma: ${{ matrix.puma }}
