--- a/rack-protection/Gemfile
+++ b/rack-protection/Gemfile
@@ -7,7 +7,7 @@ gem 'rake'
 
 rack_version = ENV['rack'].to_s
 rack_version = nil if rack_version.empty? || (rack_version == 'stable')
-rack_version = { github: 'rack/rack' } if rack_version == 'latest'
+rack_version = { github: 'rack/rack' } if rack_version == 'head'
 gem 'rack', rack_version
 
 gem 'sinatra', path: '..'
