--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -101,6 +101,7 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     if: always() && github.ref_name == 'main'
+    continue-on-error: true # always allow failure
     needs: test
     steps:
       - uses: zzak/action-discord@v4
