--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -1,37 +1,26 @@
 # frozen_string_literal: true
 
 source 'https://rubygems.org'
+
 gemspec
-
-gem 'rack-protection', path: '../rack-protection'
-gem 'sinatra', path: '..'
-
-gem 'rack-test', github: 'rack/rack-test'
-
-group :development, :test do
-  platform :jruby, :ruby do
-    gem 'hamlit', '>= 3'
-    # Use main until there's a slim release that can be used with Tilt 2.1.0
-    # https://github.com/slim-template/slim/pull/910
-    gem 'slim', github: 'slim-template/slim'
-  end
-
-  platform :ruby do
-    gem 'yajl-ruby'
-  end
-end
 
 rack_version = ENV['rack'].to_s
 rack_version = nil if rack_version.empty? || (rack_version == 'stable')
 rack_version = { github: 'rack/rack' } if rack_version == 'head'
-gem 'rack', rack_version
 
 tilt_version = ENV['tilt'].to_s
 tilt_version = nil if tilt_version.empty? || (tilt_version == 'stable')
 tilt_version = { github: 'jeremyevans/tilt' } if tilt_version == 'head'
-gem 'tilt', tilt_version
 
 gem 'erubi'
 gem 'haml'
+gem 'hamlit', '>= 3'
+gem 'rack', rack_version
+gem 'rack-protection', path: '../rack-protection'
+gem 'rack-test', github: 'rack/rack-test'
 gem 'rake', '>= 12.3.3'
 gem 'rspec', '~> 3'
+gem 'sinatra', path: '..'
+gem 'slim'
+gem 'tilt', tilt_version
+gem 'yajl-ruby', platforms: [:ruby] # c-ext
