--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
+        sudo apt-get update
         sudo apt-get install --yes \
           pandoc \
           nodejs \
@@ -57,7 +58,7 @@ jobs:
           libxslt-dev \
           libyaml-dev
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - uses: ruby/setup-ruby@v1
       continue-on-error: ${{ matrix.allow-failure || false }}
