CI: use latest rack-test release, not trunk
This comes from https://github.com/sinatra/sinatra/pull/1801 and maybe
it was a reason back then but I don't see any now.

This just makes things simpler, for example, the Docker Ruby images
based on Alpine does not come with git.

--- a/sinatra-contrib/Gemfile
+++ b/sinatra-contrib/Gemfile
@@ -17,7 +17,7 @@ gem 'haml'
 gem 'hamlit', '>= 3'
 gem 'rack', rack_version
 gem 'rack-protection', path: '../rack-protection'
-gem 'rack-test', github: 'rack/rack-test'
+gem 'rack-test'
 gem 'rake', '>= 12.3.3'
 gem 'rspec', '~> 3'
 gem 'sinatra', path: '..'
