CI: use rack stable (Rack >= 3.0)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         rack:
-          - "~> 2"
+          - stable
         ruby:
           - "2.6"
           - "2.7"
