--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,7 +77,7 @@ jobs:
         tilt:
           - stable
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 3.3, truffleruby]
+        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 3.3, jruby, truffleruby]
         include:
           # Rack
           - { ruby: 3.2, rack: head,   puma: stable,   tilt: stable, allow-failure: true }
@@ -85,9 +85,6 @@ jobs:
           - { ruby: 3.2, rack: stable, puma: head,     tilt: stable, allow-failure: true }
           # Tilt
           - { ruby: 3.2, rack: stable, puma: stable,   tilt: head, allow-failure: true }
-          # JRuby
-          - { ruby: jruby-9.3, rack: stable, puma: stable, tilt: stable } # targets Ruby 2.6 compatibility
-          - { ruby: jruby-9.4, rack: stable, puma: stable, tilt: stable } # targets Ruby 3.1 compatibility
           # Never fail our build due to problems with head
           - { ruby: ruby-head,        rack: stable, puma: stable, tilt: stable, allow-failure: true }
           - { ruby: jruby-head,       rack: stable, puma: stable, tilt: stable, allow-failure: true }
