--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,15 @@ permissions:
 
 jobs:
   rack-protection:
-    name: rack-protection (${{ matrix.ruby }}, Rack ${{ matrix.rack }})
+    name: rack-protection (${{ matrix.ruby }}, rack ${{ matrix.rack }}, rack-session ${{ matrix.rack_session }})
     runs-on: ubuntu-latest
     timeout-minutes: 5
     strategy:
       fail-fast: false
       matrix:
         rack:
+          - stable
+        rack_session:
           - stable
         ruby:
           - "2.6"
@@ -29,6 +31,10 @@ jobs:
           - "jruby"
           - "truffleruby"
           - "ruby-head"
+        include:
+          # Rack
+          - { ruby: 3.2, rack: head,   rack_session: stable }
+          - { ruby: 3.2, rack: stable, rack_session: head }
     env:
       rack: ${{ matrix.rack }}
     steps:
@@ -57,7 +63,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         webhook: ${{ secrets.DISCORD_WEBHOOK }}
-  test:
+  sinatra:
     name: ${{ matrix.ruby }} (Rack ${{ matrix.rack }}, Puma ${{ matrix.puma }}, Tilt ${{ matrix.tilt }})
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -71,7 +77,7 @@ jobs:
         tilt:
           - stable
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 3.3, truffleruby]
+        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 3.3, jruby, truffleruby]
         include:
           # Rack
           - { ruby: 3.2, rack: head,   puma: stable,   tilt: stable, allow-failure: true }
@@ -79,10 +85,6 @@ jobs:
           - { ruby: 3.2, rack: stable, puma: head,     tilt: stable, allow-failure: true }
           # Tilt
           - { ruby: 3.2, rack: stable, puma: stable,   tilt: head, allow-failure: true }
-          # Due to flaky tests, see https://github.com/sinatra/sinatra/pull/1870
-          - { ruby: jruby-9.3, rack: stable, puma: stable, tilt: stable, allow-failure: true }
-          # Due to https://github.com/jruby/jruby/issues/7647
-          - { ruby: jruby-9.4, rack: stable, puma: stable, tilt: stable, allow-failure: true }
           # Never fail our build due to problems with head
           - { ruby: ruby-head,        rack: stable, puma: stable, tilt: stable, allow-failure: true }
           - { ruby: jruby-head,       rack: stable, puma: stable, tilt: stable, allow-failure: true }
