--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,6 @@ jobs:
         rack:
           - stable
         ruby:
-          - "2.6"
           - "2.7"
           - "3.0"
           - "3.1"
@@ -77,7 +76,7 @@ jobs:
         tilt:
           - stable
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: [2.6, 2.7, '3.0', 3.1, 3.2, 3.3, jruby, truffleruby]
+        ruby: [2.7, '3.0', 3.1, 3.2, 3.3, jruby, truffleruby]
         include:
           # Rack
           - { ruby: 3.2, rack: head,   puma: stable,   tilt: stable, rack_session: stable, allow-failure: true }
