--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,7 +84,6 @@ jobs:
           - "3.1"
           - "3.2"
           - "3.3"
-          - "jruby"
         include:
           # Rack
           # allow Rack 3.1 to fail as we need a new release: https://github.com/sinatra/sinatra/issues/2014
@@ -96,6 +95,8 @@ jobs:
           - { ruby: 3.2, rack: "~>3.0.0", puma: head,     tilt: stable, rack_session: stable }
           # Tilt
           - { ruby: 3.2, rack: "~>3.0.0", puma: stable,   tilt: head,   rack_session: stable }
+          # JRuby, tests are flaky: https://github.com/sinatra/sinatra/issues/2027
+          - { ruby: jruby,            rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
           # Never fail our build due to problems with head rubies
           - { ruby: ruby-head,        rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
           - { ruby: jruby-head,       rack: "~>3.0.0", puma: stable, tilt: stable, rack_session: stable, allow-failure: true }
